update style new files added

--- a/contact.htm
+++ b/contact.htm
@@ -3,10 +3,31 @@
   <head>
     <meta charset="utf-8">
     <title> Contact  | CampCodes</title>
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <link rel="stylesheet" href="contact.css">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
+    <!-- <header>
+      <nav>
+          <a href="#"><img class="logo" src="imges/Black and Red Modern Automotive Car Logo.svg" alt="the Logo"></a>
+          <ul class="navFlexParent">
+              <li class="navItems flex_logo"></li>
+              <li class="navItems"><a href="index.htm">Home</a></li>
+              <li class="navItems"><a href="#">Gallery</a></li>
+              <li class="navItems"><a href="#">Rent</a></li>
+              <li class="navItems"><a href="contact.htm">Contact</a></li>
+              <li class="navItems"><a href="#"><i class="fas fa-2x fa-sign-in-alt"></i></a></li>
+          </ul>
+      </nav>
+  </header> -->
+
+
+
+  <a href="index.htm"><img class="logo" src="imges/Black and Red Modern Automotive Car Logo.svg" alt="the Logo"></a>
+
+
     <div class="container">
       <div class="text"> Contact Us </div>
       <form action="#">
@@ -24,7 +45,7 @@
         </div>
         <div class="form-row">
           <div class="input-data">
-            <input type="text" required>
+            <input type="email" required>
             <div class="underline"></div>
             <label for="">Email Address</label>
           </div>
@@ -49,6 +70,6 @@
         </div>
       </form>
     </div>
-
+ 
   </body>
 </html>
