--- a/index.htm
+++ b/index.htm
@@ -14,11 +14,11 @@
             <a href="#"><img class="logo" src="imges/Black and Red Modern Automotive Car Logo.svg" alt="the Logo"></a>
             <ul class="navFlexParent">
                 <!-- <li class="navItems flex_logo"></li> -->
-                <li class="navItems"><a href="#">Home</a></li>
-                <li class="navItems"><a href="#">Gallery</a></li>
-                <li class="navItems"><a href="#">Rent</a></li>
+                <li class="navItems"><a href="index.htm">Home</a></li>
+                <li class="navItems"><a href="gallery.htm">Gallery</a></li>
+                <li class="navItems"><a href="rent.htm">Rent</a></li>
                 <li class="navItems"><a href="contact.htm">Contact</a></li>
-                <li class="navItems"><a href="#"><i class="fas fa-2x fa-sign-in-alt"></i></a></li>
+                <li class="navItems"><a class="sign" href="#"><i class="fas fa-2x fa-sign-in-alt"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -202,6 +202,7 @@
 
         </section>
 
+<!-- --------------------------------------------------------- -->
 
         <footer >
             <section class="up_foot">
@@ -216,13 +217,13 @@
 
                     <div class="mid_foot_item">
                         <div class="mid_foot_item_inner inner1">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            <p class="inner_parag">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                  Sequi voluptatem, non autem repudiandae exercitationem
                                   ipsum explicabo mollitia magni nobis nemo.
                                     
                                  </p>
 
-                                 <ul>
+                                 <ul class="social_foot">
                                      <li><i class="fab fa-facebook-f"></i></li>
                                      <li><i class="fab fa-instagram"></i></li>
                                      <li><i class="fab fa-twitter"></i></li>
@@ -234,46 +235,54 @@
 
                     <div class="mid_foot_item">
 
-                        <h3>contact us</h3>
+                        <h3 class="foot_title">contact us</h3>
+                        <div class="div_para">
                         <i class="fas fa-map-marker-alt"></i>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, iste!</p>
+                        <p class="location">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, iste!</p>
+                        </div> 
+
+                        <div class="div_para">
                         <i class="fas fa-envelope"></i>
-                        <p>test@test.com</p>
+                        <p class="location">test@test.com</p>
+                    </div>
                     </div>
 
 
                     <div class="mid_foot_item">
-                          <h3>services</h3>
+                          <h3 class="foot_title">services</h3>
                           <p>wedding Rides</p>
                           <p>VIP Corporate</p>
                           <p>Truck Rent</p>
                     </div>
 
-                    <div class="mid_foot_item"></div>
+                    <div class="mid_foot_item">
 
-                          <h3>Company</h3>
+                          <h3 class="foot_title">Company</h3>
                           <p>About</p>
                           <p>Blog</p>
                           <p>Press</p>
                           <p>Policy</p>
                           <p>Support</p>
+                    </div>
+
 
                     <div class="mid_foot_item">
-                        <h3>newsletter</h3>
+                        <h3 class="foot_title">newsletter</h3>
                         <p>Lorem ipsum dolor sit,
                              amet consectetur adipisicing elit.
                               Sed, ab!
                         </p>
 
                         <form action="">
-                            <input type="email" name="" id="" placeholder="Email here to signup">
+                            <input type="email" name="" id="" placeholder="Email here to signup ">
+                            <i class="far fa-paper-plane"></i>
                         </form>
                     </div>
+
+                    <div class="mid_foot_item"><p class="down_parag">Privacy Policy | Terms & conditions | &copy; 2021-2022 All rights reserved.</p></div>
             </section>
 
-            <section class="down_foot">
-              <p></p>
-            </section>
+             
 
         </footer>
 
