update style new files added

--- a/index.htm
+++ b/index.htm
@@ -237,12 +237,12 @@
 
                         <h3 class="foot_title">contact us</h3>
                         <div class="div_para">
-                        <i class="fas fa-map-marker-alt"></i>
+                        <i class="fas fa-map-marker-alt gps"></i>
                         <p class="location">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, iste!</p>
                         </div> 
 
                         <div class="div_para">
-                        <i class="fas fa-envelope"></i>
+                        <i class="fas fa-envelope gps"></i>
                         <p class="location">test@test.com</p>
                     </div>
                     </div>
