--- a/contact.htm
+++ b/contact.htm
@@ -6,6 +6,7 @@
     <script src="https://kit.fontawesome.com/cac193e905.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="contact.css">
+
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -143,7 +144,10 @@
  
 
 </footer>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="contact.js"></script>
 
   </body>
-  <script src="contact.js"></script>
+
+
 </html>
