--- a/contact.htm
+++ b/contact.htm
@@ -132,13 +132,13 @@
                   Sed, ab!
             </p>
 
-            <form action="">
+            <!-- <form action="">
                 <input type="email" name="" id="" placeholder="Email here to signup ">
                 <i class="far fa-paper-plane"></i>
-            </form>
+            </form> -->
         </div>
 
-        <div class="mid_foot_item"><p class="down_parag">Privacy Policy | Terms & conditions | &copy; 2021-2022 All rights reserved.</p></div>
+        <!-- <div class="mid_foot_item"><p class="down_parag">Privacy Policy | Terms & conditions | &copy; 2021-2022 All rights reserved.</p></div> -->
 </section>
 
  
