--- a/gallery.htm
+++ b/gallery.htm
@@ -220,13 +220,15 @@
                       Sed, ab!
                 </p>
 
-                <form action="">
-                    <input type="email" name="" id="" placeholder="Email here to signup ">
+                <!-- <form action="">
+                    <input type="email" name="" id="mail" placeholder="Email here to signup ">
                     <i class="far fa-paper-plane"></i>
-                </form>
+                </form> -->
             </div>
 
-            <div class="mid_foot_item"><p class="down_parag">Privacy Policy | Terms & conditions | &copy; 2021-2022 All rights reserved.</p></div>
+            
+
+            <!-- <div class="mid_foot_item"><p class="down_parag">Privacy Policy | Terms & conditions | &copy; 2021-2022 All rights reserved.</p></div> -->
     </section>
 
      
